edited roles text

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">Activity</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Roles</a>
+            <a class="nav-link js-scroll-trigger" href="#roles">Roles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Discussion</a>
+            <a class="nav-link js-scroll-trigger" href="#discussion">Discussion</a>
           </li>
         </ul>
       </div>
@@ -47,6 +47,8 @@
     <div class="container text-center">
       <h1>A Portfolio Storytelling Activity!</h1>
       <p class="lead">One of the biggest mistakes we see in portfolios is focusing on the pixels rather than the overall story. This exercise will give you a set of tools to help you to critique your peers' portfolios as well as tell your own story.</p>
+      <br>
+      <p>This activity is meant to be done with a small group of three over a video conferencing platform like Zoom, Hangouts, or Skype. Within the activity instructions, you'll </p>
     </div>
   </header>
 
@@ -56,35 +58,66 @@
         <div class="col-lg-8 mx-auto">
           <h2>Activity Intro</h2>
           <p>In groups of three, you'll take on different roles and partake in a group discussion. You'll do three rounds of the activity so each person can play the different roles. This site will help facilitate you through your activity.</p>
-          <p>For each round, decide who in your group will be the <b>Designer</b>, <b>Storyteller</b>, and <b>Hiring Manager</b>. Below are the descriptions of the roles. You can click on each for instructions on how to play that role.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="roles" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>The Roles</h2>
+         <p>For each round, decide who in your group will be the <b>Designer</b>, <b>Storyteller</b>, and <b>Hiring Manager</b>. Below are the descriptions of the different roles. You can click on each for instructions on how to play that role.</p>
           <ul>
-            <li>Clickable nav links that smooth scroll to page sections</li>
-            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+            <li><a class="nav-link js-scroll-trigger" href="#designer"><b>Designer:</b></a> The Designer provides the portfolio for the group to look at based on their goal job or position.</li>
+            <li><a class="nav-link js-scroll-trigger" href="#storyteller"><b>Storyteller:</b></a> The Storyteller looks over the Designer’s portfolio and takes the perspective of the Designer, telling a narrative based on the portfolio as if they are pitching as if they the Designer.</li>
+            <li><a class="nav-link js-scroll-trigger" href="#hiring"><b>Hiring Manager:</b></a> The Hiring Manager imagines that they’re looking for someone to join their design team. They look over the Designer’s portfolio and listen to the Storyteller’s story from a hiring perspective. </li>
           </ul>
         </div>
       </div>
     </div>
   </section>
-
-  <section id="services" class="bg-light">
+  <section id="designer" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Services we offer</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+          <h2>The Designer</h2>
+          <p class="lead">In the chat feature, post a link to your portfolio as well as your goal job or position. The Storyteller will be interpreting your portfolio and telling the story of your portfolio so as you’re listening to the story, think about which parts you feel are most relevant. Keep time for the Storyteller as well (2 minutes to scan the portfolio and 5 minutes for the storytelling).</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="storyteller" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>The Storyteller</h2>
+          <p class="lead">Take 2 minutes to scan the Designer’s portfolio. Then share your screen to show the Designer’s portfolio so that the group can follow along. Based solely on the portfolio without explanation or context, pretend you are the Designer and tell a story about yourself to the Hiring Manager as if you were pitching yourself for the Designer’s goal job. 
+            <br><br>
+          Keep your story to roughly 5 minutes; it should be a quick elevator pitch rather than a detailed retelling of the portfolio. Don’t spend too much time reading through the portfolio or trying to gain a complete or accurate picture. The point is to try to tell the Designer’s story with the information that you see, and use your own interpretation to try to tell the story!
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="hiring" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>The Hiring Manager</h2>
+          <p class="lead">Imagine you’re looking to hire someone for your design team. Listen to the story the Storyteller tells as you follow along with the Designer’s portfolio. As you’re listening, think about what stands out to you most about the Designer’s story from a hiring perspective. What do you feel is missing or something you’d like to know more about from the Designer’s story?</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="contact">
+  <section id="discussion">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Contact us</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+          <h2>Discussion</h2>
+          <p class="lead">Now that you've played your different roles, come together as a group to have a discussion.</p>
         </div>
       </div>
     </div>
